tools/hermes/tests/fixtures/associated_types/expected.stderr
  × unexpected token '...'; expected term
    ╭─[[PROJECT_ROOT]/src/lib.rs:11:12]
 10 │ /// ```lean, hermes
 11 │ /// isSafe : ...
    ·            ──┬─
    ·              ╰── here
 12 │ /// ```
    ╰────

Error: Lean verification failed
